apps/base/tested-django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tested-django
spec:
  selector:
    app: tested-django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
