apps/base/tested-django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tested-django
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tested-django.k8s-demo.de
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: tested-django.k8s-demo.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tested-django
                port:
                  number: 8000
